// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: Datepicker -  renders 1`] = `
<input
  className="form-control"
  data-datepicker=""
  data-datepicker-format={null}
  data-datepicker-max={null}
  data-datepicker-min={null}
  data-datepicker-months={null}
  data-datepicker-time={null}
  data-datepicker-value={null}
  data-required={null}
  type="text"
/>
`;

exports[`Component: Datepicker -  renders with the form-group and label 1`] = `
<div
  className="form-group"
>
  

  <label>
    test
  </label>
  

  <div
    className="input-group"
  >
    

    

    <input
      className="form-control"
      data-datepicker=""
      data-datepicker-format={null}
      data-datepicker-max={null}
      data-datepicker-min={null}
      data-datepicker-months={null}
      data-datepicker-time={null}
      data-datepicker-value={null}
      data-required={null}
      type="text"
    />
    

  </div>
</div>
`;
